--- a/Public/admin.html
+++ b/Public/admin.html
@@ -146,7 +146,7 @@
                   <div class="profile-title">
                     <div class="profile-inner">
                       <img class="userImg" src="" alt="">
-                      <img class="fullpicture" src="" alt="">
+                      <img class="fullpicture " src="" alt="">
                     </div>
                     <button class="view-image1">View Image</button>
                   </div>
@@ -197,7 +197,7 @@
                       <div class="flex-div">
                         <div class="proof-img">
                           <img class="fixed-img" src="image/Image.svg" alt="" />
-                          <img  class="proofAddress-ouput proofAddress" src="" alt="">
+                          <img  class="proofAddress-ouput proofAddress stateId" src="" alt="">
                         </div>
                         <button class="view-image">View Image</button>
                       </div>
@@ -279,7 +279,7 @@
                   <div class="profile-title">
                     <div class="profile-inner">
                       <img class="userImg" src="" alt="">
-                      <img class="fullpicture" src="" alt="">
+                      <img class="fullpicture " src="" alt="">
                     </div>
                     <button class="view-image1">View Image</button>
                   </div>
@@ -327,7 +327,7 @@
                           <p class="address-output">Proof of Address</p>
                         </div>
                       </div>
-                      <div class="flex-div proofAddress-div">
+                      <div class="flex-div proofAddress-div" style="background-color: red;">
                         <p>Proof of Address</p>
                         <div class="proof-img">
                           <img class="fixed-img" src="image/Image.svg" alt="" />
@@ -376,13 +376,13 @@
                       <div class="flex-div">
                         <p>Account Limit Balance</p>
                         <div class="box">
-                          <p class="">Hold</p>
+                          <p class="accountBalance"></p>
                         </div>
                       </div>
                       <div class="flex-div">
                         <p>Status</p>
                         <div class="box">
-                          <p class="account-status"></p>
+                          <p class="acc-status"></p>
                         </div>
                       </div>
                       <div class="flex-div">
@@ -413,8 +413,7 @@
                   <div class="profile-title">
                     <div class="profile-title">
                       <div class="profile-inner">
-                        <img class="userImg" src="" alt="">
-                        <img class="fullpicture" src="" alt="">
+                        <img class="edit-image" src="" alt="">
                       </div>
                     </div>
                   </div>
