--- a/Public/admin.html
+++ b/Public/admin.html
@@ -327,11 +327,11 @@
                           <p class="address-output">Proof of Address</p>
                         </div>
                       </div>
-                      <div class="flex-div proofAddress-div" style="background-color: red;">
+                      <div class="flex-div proofAddress-div">
                         <p>Proof of Address</p>
                         <div class="proof-img">
                           <img class="fixed-img" src="image/Image.svg" alt="" />
-                          <img  class="proofAddress-ouput proofAddress" src="" alt="">
+                          <img  class="proofAddress-ouput proofAddress newUserStateId" src="" alt="">
                         </div>
                         <button class="view-image">View Image</button>
                       </div>
