--- a/Public/admin.html
+++ b/Public/admin.html
@@ -189,6 +189,12 @@
                         </div>
                       </div>
                       <div class="flex-div">
+                        <p>Account  balance</p>
+                        <div class="box">
+                          <p class="account-balance">$ 500,000.00</p>
+                        </div>
+                      </div>
+                      <div class="flex-div">
                         <p>Address</p>
                         <div class="box">
                           <p class="address-output">Proof of Address</p>
@@ -240,15 +246,9 @@
                         </div>
                       </div>
                       <div class="flex-div">
-                        <p>Account Limit Balance</p>
-                        <div class="box">
-                          <p class="account-status">Hold</p>
-                        </div>
-                      </div>
-                      <div class="flex-div">
                         <p>Status</p>
                         <div class="box">
-                          <p>$ 500,000.00</p>
+                          <p class="account-status">Hold</p>
                         </div>
                       </div>
                       <div class="flex-div">
@@ -374,7 +374,7 @@
                         </div>
                       </div>
                       <div class="flex-div">
-                        <p>Account Limit Balance</p>
+                        <p>Account  balance</p>
                         <div class="box">
                           <p class="accountBalance"></p>
                         </div>
