--- a/Public/contact.html
+++ b/Public/contact.html
@@ -64,7 +64,7 @@
       <header class="static-header">
         <div class="header-container">
           <a href="index.html" class="logo"
-            ><img src="image/Frame 4577.svg" alt=""
+            ><img src="image/mainlogo.svg" alt=""
           /></a>
           <nav class="header-nav">
             <ul>
@@ -85,7 +85,7 @@
         <!-- mobile view -->
         <div class="mobile-view">
           <div class="mobile-logo">
-            <img src="image/Frame 4579.svg" alt="" />
+            <img src="image/mainlogo.svg" alt="" />
           </div>
           <div class="nav-box">
             <div class="nav-container">
@@ -101,7 +101,7 @@
       <header class="fixed-header hidden">
         <div class="header-container">
           <a id="logo" href="index.html"
-            ><img src="image/Frame 4577.svg" alt=""
+            ><img src="image/mainlogo.svg" alt=""
           /></a>
           <nav class="header-nav">
             <ul>
@@ -122,7 +122,7 @@
         <!-- mobile view -->
         <div class="mobile-view">
           <div class="mobile-logo">
-            <img src="image/Frame 4579.svg" alt="" />
+            <img src="image/mainlogo.svg" alt="" />
           </div>
           <div class="nav-box">
             <div class="nav-container">
@@ -138,7 +138,7 @@
       <!-- mobile view header -->
       <div class="navbar">
         <div class="drop-logo">
-          <img src="image/Frame 4579.svg" alt="" />
+          <img src="image/mainlogo.svg" alt="" />
           <div id="nav-cancel">
             <img src="image/x-circle.svg" alt="" />
           </div>
