--- a/Public/index.html
+++ b/Public/index.html
@@ -55,7 +55,7 @@
       <!-- Static Header -->
      <header  class="static-header">
    <div class="header-container">
-    <a href="index.html" class="logo"><img src="image/Frame 4577.svg" alt="" /></a>
+    <a href="index.html" class="logo"><img src="image/mainlogo.svg" alt="" /></a>
     <nav class="header-nav">
       <ul>
         <li><a class="navs" href="index.html">Home</a></li>
@@ -75,7 +75,7 @@
     <!-- mobile view -->
   <div class="mobile-view">
     <div class="mobile-logo">
-      <img src="image/Frame 4579.svg" alt="">
+      <img src="image/mainlogo.svg" alt="">
       </div>
       <div class="nav-box">
         <div class="nav-container">
@@ -90,7 +90,7 @@
  
      <header class="fixed-header hidden">
        <div class="header-container">
-        <a id="logo" href="index.html"><img src="image/Frame 4577.svg" alt="" /></a>
+        <a id="logo" href="index.html"><img src="image/mainlogo.svg" alt="" /></a>
         <nav class="header-nav">
           <ul>
             <li><a class="navs" href="index.html">Home</a></li>
@@ -111,7 +111,7 @@
         <!-- mobile view -->
        <div class="mobile-view">
     <div class="mobile-logo">
-      <img src="image/Frame 4579.svg" alt="">
+      <img src="image/mainlogo.svg" alt="">
       </div>
       <div class="nav-box">
         <div class="nav-container">
@@ -127,7 +127,7 @@
       <!-- header mobile view -->
       <div class="navbar">
         <div class="drop-logo">
-          <img src="image/Frame 4579.svg" alt="">
+          <img src="image/mainlogo.svg" alt="">
           <div id="nav-cancel">
             <img src="image/x-circle.svg" alt="">
           </div>
