--- a/Public/texting.html
+++ b/Public/texting.html
@@ -1,11 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Account Approved</title>
+    <style>
+      body {
+        border: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        background-color: #f4f4f4;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      main {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .email-container {
+        width: 90%;
+        max-width: 595px;
+        background: #fff;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        padding: 30px;
+      }
+
+      .header {
+        text-align: center;
+        border-bottom: 1px solid #000;
+        padding-bottom: 20px;
+      }
+
+      .email-title {
+        text-align: center;
+        margin: 20px 0;
+      }
+
+      .email-title h2 {
+        font-size: 22px;
+        font-weight: bold;
+      }
+
+      .email-content {
+        padding: 20px 0;
+        text-align: center;
+      }
+
+      .email-content p {
+        font-size: 16px;
+        line-height: 1.5;
+      }
+
+      .btn {
+        display: inline-block;
+        padding: 12px 20px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+        margin-top: 20px;
+      }
+
+      .btn:hover {
+        background-color: #0056b3;
+      }
+
+      .enquiries {
+        text-align: center;
+        padding-top: 20px;
+        font-size: 15px;
+        color: #555;
+      }
+
+      .footer {
+        background-color: #000;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+        font-size: 14px;
+        border-radius: 0 0 8px 8px;
+        margin-top: 10px;
+      }
+
+      .footer p {
+        margin-bottom: 10px;
+      }
+
+      .footer-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .footer h4 {
+        margin-bottom: 8px;
+      }
+
+      @media (max-width: 768px) {
+        .email-container {
+          width: 95%;
+          padding: 20px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .email-container {
+          width: 100%;
+          padding: 15px;
+          border-radius: 0;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="email-container">
+        <div class="header">
+          <img src="image/logo.png" alt="logo" width="150" />
+        </div>
+        <div class="email-title">
+          <h2>Account Approved</h2>
+        </div>
+        <div class="email-content">
+          <p>Dear <strong>jame emmanuel</strong>,</p>
+          <p>Your account has been approved.</p>
+          <p>You can proceed to your dashboard using the link below or by logging in with your email and password.</p>
+          <a href="#" class="btn">Go to Dashboard</a>
+        </div>
+        <div class="enquiries">
+          <p>
+            For more enquiries, please contact our customer service at
+            <strong>support@UnlimitedSfundsBank.com</strong> or call
+            <strong>+311 6384 8274</strong>.
+          </p>
+        </div>
+        <footer class="footer">
+          <div class="footer-flex">
+            <h4>UnlimitedSfunds Bank Ltd.</h4>
+            <p>
+              Making the world a better place through constructive financial
+              solutions. Our innovative banking services empower individuals and
+              businesses worldwide.
+            </p>
+            <p>&copy; 2025 UnlimitedSfundsBank - All rights reserved.</p>
+          </div>
+        </footer>
+      </div>
+    </main>
+  </body>
 </html>
