--- a/Public/index.html
+++ b/Public/index.html
@@ -157,9 +157,9 @@
           </div>
           <div class="content-div">
             <p class="content-p">BEST DIGITAL BANK</p>
-            <h3 class="content-h">A FUTURE OF BANKING WITH Unlimited funds BANK</h3>
+            <h3 class="content-h">A FUTURE OF BANKING WITH Unlimited Success funds BANK</h3>
             <p class="content-p2">
-              Bank smarter, not harder with Unlimited funds Bank, manage your finances
+              Bank smarter, not harder with Unlimited Success funds Bank, manage your finances
               effortlessly with our super intuitive digital platform
             </p>
             <div class="inner-div">
