--- a/Public/index.html
+++ b/Public/index.html
@@ -157,7 +157,7 @@
           </div>
           <div class="content-div">
             <p class="content-p">BEST DIGITAL BANK</p>
-            <h3 class="content-h">A FUTURE OF BANKING WITH Unlimited Success funds BANK</h3>
+            <h3 class="content-h">A FUTURE OF BANKING WITH UNLIMITED SUCCESS FUNDS BANK</h3>
             <p class="content-p2">
               Bank smarter, not harder with Unlimited Success funds Bank, manage your finances
               effortlessly with our super intuitive digital platform
