--- a/Public/index.html
+++ b/Public/index.html
@@ -201,7 +201,7 @@
               </p>
             </div>
             <div class="box">
-              <img src="image/customer-support-1--customer-headset-help-microphone-phone-support.svg" alt="water bottle" />
+              <img src="image/Customer-Support.svg" alt="water bottle" />
               <h3>24/7 Support from the expert team</h3>
               <p>
                 Our support is there 24/7 to attend to all your questions, feel
